# choptimize

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  choptimize-flow.drawio  debug_pipeline.py  pyproject.toml  ruff.toml
analysis/: __main__.py  common.py  correlations.py  visualizations.py
app/: __init__.py  __main__.py
app/cli/display/: __init__.py
app/cli/parsing/: __init__.py  cli.py  display.py  opt.py  parse.py
app/engine/: __init__.py  improver.py  llm.py  models.py  retriever.py  scorer.py  types.py  validator.py
app/engine/knowledge/: rubric.json  techniques.json
app/web/: app.py
app/web/static/: style.css
app/web/templates/: index.html
app/web/templates/partials/: error.html  result.html
common/: pyproject.toml
common/src/common/utils/: cache.py  console.py  dataset.py
common/utils/: __init__.py  cache.py  console.py  display.py
eval/: __main__.py  prompts.json  results.json
preproc/: README.md  download.py  filter.py  run_pipeline.py  semantic.py  semantic.py.prompt.xml  semantics.py  syntax.py  syntax_eval.parquet
preproc/utils/: cache.py  progress.py
