[project]
name = "choptimize"
version = "0.1.0"
description = "CLI tool for analysing prompt quality in developer-LLM code conversations"
readme = "README.md"
authors = [{ name = "darragh0" }]
license = "MIT"
keywords = ["prompt-quality", "code-generation", "llm", "analysis"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
  "annotated-types>=0.7.0",
  "datasets>=4.5.0",
  "fasttext-predict>=0.9.2.4",
  "matplotlib>=3.10.0",
  "numpy>=2.0.0",
  "openai>=1.0.0",
  "pandas>=2.0.0",
  "radon>=6.0.0",
  "rich>=14.3.1",
  "rich-argparse>=1.6.0",
  "scipy>=1.15.0",
  "seaborn>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/darragh0/choptimize"
Repository = "https://github.com/darragh0/choptimize"

[dependency-groups]
dev = ["deptry>=0.24.0", "mypy>=1.19.1", "ruff>=0.14.14", "typ>=0.11.0"]
