[project]
name = "common"
version = "0.1.0"
description = "Common modules for preprocessing/analysis/choptimize"
authors = [{ name = "darragh0" }]
requires-python = ">=3.13"
dependencies = ["pandas>=3.0.0", "rich>=14.3.1"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
